--- a/index.css
+++ b/index.css
@@ -211,3 +211,39 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+/* CARDS */
+.img-contenedor {
+    overflow: hidden;
+    position: relative;
+    transition: all 0.7s;
+}
+
+.card .card-img {
+    max-width: 100%;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.card:hover>* {
+    transition: all ease-in-out 0.7s;
+}
+
+.card:hover .card-img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.card:hover .img-contenedor:before {
+    position: absolute;
+    content: '';
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.5);
+    transition: all ease-in-out 0.7s;
+}
